--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
     "react-native": "0.69.5",
     "react-native-bootsplash": "4.3.2",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-quick-sqlite": "^5.0.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
-    "reactotron-react-native": "5.0.3"
+    "reactotron-react-native": "5.0.3",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -132,7 +134,7 @@
   "prettier": {
     "printWidth": 100,
     "semi": false,
-    "singleQuote": false,
+    "singleQuote": true,
     "trailingComma": "all"
   },
   "detox": {
