--- a/package.json
+++ b/package.json
@@ -40,10 +40,14 @@
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-firebase/analytics": "^16.4.3",
+    "@react-native-firebase/app": "^16.4.3",
+    "@react-native-firebase/perf": "^16.4.3",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
+    "@sentry/react-native": "^4.8.0",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
     "expo": "~46.0.3",
@@ -64,6 +68,7 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-bootsplash": "4.3.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-quick-sqlite": "^5.0.3",
     "react-native-reanimated": "~2.9.1",
