--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
     "@sentry/react-native": "^4.8.0",
+    "@shopify/flash-list": "^1.4.0",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
     "expo": "~46.0.3",
@@ -70,10 +71,10 @@
     "react-native-bootsplash": "4.3.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-quick-sqlite": "^5.0.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3",
