--- a/package.json
+++ b/package.json
@@ -58,11 +58,10 @@
     "expo-file-system": "~14.1.0",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "~11.4.0",
-    "expo-localization": "13.1.0",
     "expo-modules-core": "~0.11.3",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
-    "i18n-js": "3.9.2",
+    "i18next": "^22.0.4",
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
@@ -71,6 +70,8 @@
     "react-native-bootsplash": "4.3.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-localize": "^2.2.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
