--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@react-navigation/stack": "~6.2.1",
     "@sentry/react-native": "^4.8.0",
     "@shopify/flash-list": "^1.4.0",
-    "apisauce": "2.1.5",
+    "apisauce": "^2.1.6",
+    "axios": "^1.1.3",
     "date-fns": "^2.29.2",
     "expo": "~46.0.3",
     "expo-application": "~4.2.2",
@@ -62,24 +63,33 @@
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.4",
+    "lottie-ios": "^3.5.0",
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
-    "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react": "18.1.0",
+    "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-iap": "^12.4.4",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
+    "react-native-mmkv": "^2.5.1",
+    "react-native-orientation-locker": "^1.5.0",
+    "react-native-override-color-scheme": "^1.0.3",
+    "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^13.5.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -117,7 +127,7 @@
     "jest-environment-node": "26",
     "jest-expo": "^46.0.1",
     "metro-config": "0.71.1",
-    "metro-react-native-babel-preset": "0.71.1",
+    "metro-react-native-babel-preset": "0.70.3",
     "metro-source-map": "0.71.1",
     "mocha": "6",
     "patch-package": "6.4.7",
@@ -127,6 +137,7 @@
     "react-devtools-core": "4.24.7",
     "react-dom": "18.0.0",
     "react-native-rename": "^2.9.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "^0.18.7",
     "reactotron-core-client": "^2.8.10",
     "regenerator-runtime": "^0.13.4",
