--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-firebase/analytics": "^16.4.3",
     "@react-native-firebase/app": "^16.4.3",
     "@react-native-firebase/perf": "^16.4.3",
@@ -108,6 +107,7 @@
     "@typescript-eslint/parser": "5.28.0",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "detox": "19.12.1",
     "detox-expo-helpers": "0.6.0",
     "eslint": "8.17.0",
