--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@shopify/flash-list": "^1.4.0",
     "apisauce": "^2.1.6",
     "axios": "^1.1.3",
+    "colord": "^2.9.3",
     "date-fns": "^2.29.2",
     "expo": "~46.0.3",
     "expo-application": "~4.2.2",
@@ -64,6 +65,7 @@
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
+    "mst-persist": "^0.1.3",
     "react": "18.1.0",
     "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
