--- a/.eslintrc
+++ b/.eslintrc
@@ -63,6 +63,7 @@
     "react-native/no-raw-text": 0,
     "react/no-unescaped-entities": 0,
     "react/prop-types": 0,
-    "space-before-function-paren": 0
+    "space-before-function-paren": 0,
+    "react/react-in-jsx-scope": 0
   }
 }
