feat: config code push

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-modules-core": "~0.11.3",
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.4",
+    "iconoir-react-native": "^5.4.0",
     "lottie-ios": "^3.5.0",
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
@@ -58,6 +59,7 @@
     "react": "18.1.0",
     "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
+    "react-native-code-push": "^7.0.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
