--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "react-native start",
     "ios": "react-native run-ios",
-    "android": "react-native run-android --active-arch-only",
     "test:detox": "detox test -c ios.sim.debug",
     "build:detox": "detox build -c ios.sim.debug",
     "ci:test:detox": "detox test -c ios.sim.release -l verbose --cleanup",
@@ -19,9 +18,9 @@
     "adb": "adb reverse tcp:9090 tcp:9090 && adb reverse tcp:3000 tcp:3000 && adb reverse tcp:9001 tcp:9001 && adb reverse tcp:8081 tcp:8081",
     "postinstall": "node ./bin/postInstall",
     "bundle:ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios",
-    "bundle:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "release:ios": "echo 'Not implemented yet: release:ios. Use Xcode. More info: https://reactnative.dev/docs/next/publishing-to-app-store'",
-    "release:android": "cd android && rm -rf app/src/main/res/drawable-* && ./gradlew assembleRelease && cd - && echo 'APK generated in ./android/app/build/outputs/apk/release/app-release.apk'",
+    "dynamic:ios:dev": "appcenter codepush release-react -a 15186743693-163.com/yin3-si1-kong1-jian1 -d Staging",
+    "dynamic:ios": "appcenter codepush release-react -a 15186743693-163.com/yin3-si1-kong1-jian1 -d Production",
     "clean": "npx react-native-clean-project",
     "clean-all": "npx react-native clean-project-auto",
     "rename": "react-native-rename"
