--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/hooks": "^2.8.1",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-native-firebase/analytics": "^16.4.3",
     "@react-native-firebase/app": "^16.4.3",
     "@react-native-firebase/perf": "^16.4.3",
@@ -48,6 +49,7 @@
     "expo-constants": "~13.2.3",
     "expo-device": "~4.3.0",
     "expo-file-system": "~14.1.0",
+    "expo-haptics": "^12.0.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-modules-core": "~0.11.3",
     "expo-status-bar": "~1.4.0",
@@ -61,10 +63,12 @@
     "react-native": "0.69.7",
     "react-native-bootsplash": "4.3.2",
     "react-native-code-push": "^7.0.5",
+    "react-native-device-info": "^10.3.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-iap": "^12.4.4",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
     "react-native-mmkv": "^2.5.1",
