--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^9.3.6",
@@ -42,6 +43,7 @@
     "@sentry/react-native": "^4.8.0",
     "@shopify/flash-list": "^1.4.0",
     "axios": "^1.1.3",
+    "burnt": "^0.7.0",
     "colord": "^2.9.3",
     "date-fns": "^2.29.2",
     "expo": "~46.0.3",
