--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.5.0",
     "typeorm": "^0.3.10",
-    "use-deep-compare-effect": "^1.8.1"
+    "use-deep-compare-effect": "^1.8.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -99,6 +100,7 @@
     "@types/jest": "26.0.19",
     "@types/react": "^17",
     "@types/react-native": "0.67.8",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
     "babel-jest": "26.6.3",
