--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-file-system": "~14.1.0",
     "expo-haptics": "^12.0.1",
     "expo-linear-gradient": "~11.4.0",
+    "expo-local-authentication": "^13.0.2",
     "expo-modules-core": "~0.11.3",
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.4",
