--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "mobx-state-tree": "5.1.5",
     "react": "18.1.0",
     "react-native": "0.69.7",
-    "react-native-bootsplash": "4.3.2",
+    "react-native-bootsplash": "^4.3.3",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
     "react-native-fast-image": "^8.6.3",
