--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
     "react-native-sfsymbols": "^1.2.1",
+    "react-native-shake": "^5.1.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.5.0",
     "typeorm": "^0.3.10",
