--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-native-shake": "^5.1.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.5.0",
+    "rxjs": "^7.6.0",
     "typeorm": "^0.3.10",
     "use-deep-compare-effect": "^1.8.1",
     "validator": "^13.7.0"
