--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "expo-linear-gradient": "~11.4.0",
     "expo-local-authentication": "^13.0.2",
     "expo-modules-core": "~0.11.3",
+    "expo-sensors": "^12.0.1",
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.4",
     "iconoir-react-native": "^5.4.0",
@@ -67,6 +68,7 @@
     "react-native-bootsplash": "^4.3.3",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
+    "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
