feat: add GradientText component

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-native-firebase/analytics": "^16.4.3",
     "@react-native-firebase/app": "^16.4.3",
     "@react-native-firebase/perf": "^16.4.3",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
@@ -87,6 +88,7 @@
     "react-native-shake": "^5.1.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.5.0",
+    "react-query": "^3.39.2",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.10",
     "use-deep-compare-effect": "^1.8.1",
