--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-navigation/stack": "~6.2.1",
     "@sentry/react-native": "^4.8.0",
     "@shopify/flash-list": "^1.4.0",
+    "@tanstack/react-query": "^4.19.1",
     "axios": "^1.1.3",
     "burnt": "^0.7.0",
     "colord": "^2.9.3",
@@ -88,7 +89,6 @@
     "react-native-shake": "^5.1.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.5.0",
-    "react-query": "^3.39.2",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.10",
     "use-deep-compare-effect": "^1.8.1",
