--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.4",
     "iconoir-react-native": "^5.4.0",
-    "lottie-ios": "^3.5.0",
+    "lottie-react-native": "^5.1.4",
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
