--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-hold-menu": "^0.1.5",
     "react-native-iap": "^12.4.9",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.6.2",
