--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native-firebase/app": "^16.4.3",
     "@react-native-firebase/perf": "^16.4.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-segmented-control/segmented-control": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
@@ -67,6 +68,7 @@
     "mobx-state-tree": "5.1.5",
     "react": "18.1.0",
     "react-native": "0.69.7",
+    "react-native-actions-sheet": "^0.8.10",
     "react-native-bootsplash": "^4.3.3",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
