feat: add group path config

--- a/ios/PrivacyBox/Info.plist
+++ b/ios/PrivacyBox/Info.plist
@@ -93,5 +93,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>AppGroupName</key>
+    <string>group.net.darkce.privatespace</string>
 </dict>
 </plist>
