--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native": "0.69.7",
     "react-native-actions-sheet": "^0.8.10",
     "react-native-bootsplash": "^4.3.3",
+    "react-native-cloud-store": "^0.8.2",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
     "react-native-dynamic-app-icon": "^1.1.0",
@@ -79,6 +80,7 @@
     "react-native-hold-menu": "^0.1.5",
     "react-native-iap": "^12.4.9",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
     "react-native-mmkv": "^2.5.1",
