--- a/ios/PrivacyBox/PrivacyBox.entitlements
+++ b/ios/PrivacyBox/PrivacyBox.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.net.darkce.privacybox</string>
+		<string>iCloud.net.darkce.privatespace</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -14,7 +14,7 @@
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.net.darkce.privacybox</string>
+		<string>iCloud.net.darkce.privatespace</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
