--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,11 @@ require File.join(File.dirname(`cd #{pod_folder} && node --print "require.resolv
 platform :ios, '14.0'
 install! 'cocoapods', :deterministic_uuids => false
 
+# 避免使用 IDFA
+$RNFirebaseAnalyticsWithoutAdIdSupport = true
+# 使用嵌入式 SQLite
+$QUICK_SQLITE_USE_PHONE_VERSION = 1
+
 target 'PrivacyBox' do
   use_expo_modules!
   post_integrate do |installer|
@@ -46,8 +51,6 @@ target 'PrivacyBox' do
   pod 'Firebase', :modular_headers => true
   pod 'FirebaseCore', :modular_headers => true
   pod 'GoogleUtilities', :modular_headers => true
-  # 避免使用 IDFA
-  $RNFirebaseAnalyticsWithoutAdIdSupport = true
 
   target 'PrivacyBoxTests' do
     inherit! :complete
