--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-native-orientation-locker": "^1.5.0",
     "react-native-override-color-scheme": "^1.0.3",
     "react-native-permissions": "^3.6.1",
+    "react-native-quick-sqlite": "^6.1.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
