feat: add data migrator screen

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator 'iPhone 12 (16.0)'",
     "test:detox": "detox test -c ios.sim.debug",
     "build:detox": "detox build -c ios.sim.debug",
     "ci:test:detox": "detox test -c ios.sim.release -l verbose --cleanup",
@@ -42,6 +42,7 @@
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
+    "@rn-kit/sqlite": "^6.0.3",
     "@sentry/react-native": "^4.8.0",
     "@shopify/flash-list": "^1.4.0",
     "@tanstack/react-query": "^4.19.1",
@@ -70,6 +71,7 @@
     "react-native": "0.69.7",
     "react-native-actions-sheet": "^0.8.10",
     "react-native-bootsplash": "^4.3.3",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-cloud-store": "^0.8.2",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
@@ -93,7 +95,6 @@
     "react-native-screens": "3.15.0",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
-    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.5.0",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.10",
