--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "release:ios": "echo 'Not implemented yet: release:ios. Use Xcode. More info: https://reactnative.dev/docs/next/publishing-to-app-store'",
     "dynamic:ios:dev": "appcenter codepush release-react -a 15186743693-163.com/yin3-si1-kong1-jian1 -d Staging",
     "dynamic:ios": "appcenter codepush release-react -a 15186743693-163.com/yin3-si1-kong1-jian1 -d Production",
-    "clean": "npx react-native-clean-project",
+    "clean": "npx react-native-clean-project --remove-iOS-build --remove-iOS-pods",
     "clean-all": "npx react-native clean-project-auto",
     "rename": "react-native-rename"
   },
@@ -63,6 +63,7 @@
     "expo-status-bar": "~1.4.0",
     "i18next": "^22.0.4",
     "iconoir-react-native": "^5.4.0",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
@@ -70,6 +71,7 @@
     "react": "18.1.0",
     "react-native": "0.69.7",
     "react-native-actions-sheet": "^0.8.10",
+    "react-native-blurhash": "^1.1.10",
     "react-native-bootsplash": "^4.3.3",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-cloud-store": "^0.8.2",
@@ -77,8 +79,9 @@
     "react-native-device-info": "^10.3.0",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
-    "react-native-fs": "^2.20.0",
+    "react-native-fs": "2.20.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-hold-menu": "^0.1.5",
     "react-native-iap": "^12.4.9",
     "react-native-inappbrowser-reborn": "^3.7.0",
@@ -99,6 +102,7 @@
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.10",
     "use-deep-compare-effect": "^1.8.1",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -112,6 +116,7 @@
     "@rnx-kit/metro-resolver-symlinks": "0.1.21",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.19",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^17",
     "@types/react-native": "0.67.8",
     "@types/validator": "^13.7.10",
