--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-native-firebase/analytics": "^16.4.3",
     "@react-native-firebase/app": "^16.4.3",
     "@react-native-firebase/perf": "^16.4.3",
+    "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -99,6 +100,7 @@
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
     "react-native-svg": "^13.5.0",
+    "react-native-zip-archive": "^6.0.9",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.10",
     "use-deep-compare-effect": "^1.8.1",
