feat: add ceate folder feature

--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
     "iconoir-react-native": "^5.4.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
+    "mime": "^3.0.0",
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
     "react": "18.1.0",
     "react-native": "0.69.7",
     "react-native-actions-sheet": "^0.8.10",
+    "react-native-app-toolkit": "^1.1.0",
     "react-native-blurhash": "^1.1.10",
     "react-native-bootsplash": "^4.3.3",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -80,6 +82,7 @@
     "react-native-device-info": "^10.3.0",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "2.20.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "^1.8.0",
