--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-native-screens": "3.15.0",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
+    "react-native-share": "^8.0.1",
     "react-native-svg": "^13.5.0",
     "react-native-zip-archive": "^6.0.9",
     "rxjs": "^7.6.0",
