feat: add fetch all files

--- a/.eslintrc
+++ b/.eslintrc
@@ -66,6 +66,7 @@
     "space-before-function-paren": 0,
     "react/react-in-jsx-scope": 0,
     "react-native/no-inline-styles": 0,
-    "react-native/split-platform-components": 0
+    "react-native/split-platform-components": 0,
+    "camelcase": 0,
   }
 }
