--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "expo-haptics": "^12.0.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-local-authentication": "^13.0.2",
+    "expo-media-library": "^15.0.0",
     "expo-modules-core": "~0.11.3",
     "expo-sensors": "^12.0.1",
     "expo-status-bar": "~1.4.0",
@@ -80,6 +81,7 @@
     "react-native-cloud-store": "^0.9.1",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
+    "react-native-document-picker": "^8.1.3",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-file-viewer": "^2.1.5",
@@ -88,6 +90,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-hold-menu": "^0.1.5",
     "react-native-iap": "^12.4.9",
+    "react-native-image-picker": "^4.10.3",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
@@ -123,6 +126,7 @@
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.19",
     "@types/lodash": "^4.14.191",
+    "@types/mime": "^3.0.1",
     "@types/react": "^17",
     "@types/react-native": "0.67.8",
     "@types/validator": "^13.7.10",
