--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
     "react": "18.1.0",
+    "react-fast-compare": "^3.2.0",
     "react-native": "0.69.7",
     "react-native-actions-sheet": "^0.8.10",
     "react-native-app-toolkit": "^1.1.0",
