feat: add PhotoItem

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "axios": "^1.2.1",
     "burnt": "^0.7.0",
     "colord": "^2.9.3",
-    "date-fns": "^2.29.2",
+    "dayjs": "^1.11.7",
     "expo": "~46.0.3",
     "expo-application": "~4.2.2",
     "expo-constants": "~13.2.3",
@@ -71,6 +71,7 @@
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
+    "numeral": "^2.0.6",
     "react": "18.1.0",
     "react-fast-compare": "^3.2.0",
     "react-native": "0.69.7",
@@ -128,6 +129,7 @@
     "@types/jest": "26.0.19",
     "@types/lodash": "^4.14.191",
     "@types/mime": "^3.0.1",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^17",
     "@types/react-native": "0.67.8",
     "@types/validator": "^13.7.10",
