--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "expo-modules-core": "~0.11.3",
     "expo-sensors": "^12.0.1",
     "expo-status-bar": "~1.4.0",
+    "ffmpeg-kit-react-native": "^5.1.0",
     "i18next": "^22.0.4",
     "iconoir-react-native": "^5.4.0",
     "lodash": "^4.17.21",
