--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "expo-device": "~4.3.0",
     "expo-file-system": "~14.1.0",
     "expo-haptics": "^12.0.1",
+    "expo-image-manipulator": "^11.0.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-local-authentication": "^13.0.2",
     "expo-media-library": "^15.0.0",
