--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-native-mmkv": "^2.5.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-override-color-scheme": "^1.0.3",
+    "react-native-pager-view": "^6.0.0-rc.2",
     "react-native-permissions": "^3.6.1",
     "react-native-quick-sqlite": "^6.1.0",
     "react-native-reanimated": "~2.9.1",
