--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^9.3.6",
-    "@react-native-firebase/analytics": "^16.4.3",
-    "@react-native-firebase/app": "^16.4.3",
-    "@react-native-firebase/perf": "^16.4.3",
+    "@react-native-firebase/analytics": "16.4.3",
+    "@react-native-firebase/app": "16.4.3",
+    "@react-native-firebase/perf": "16.4.3",
+    "@react-native-firebase/remote-config": "16.4.3",
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
@@ -75,13 +76,16 @@
     "mobx-state-tree": "5.1.5",
     "numeral": "^2.0.6",
     "react": "18.1.0",
+    "react-airplay": "^1.2.0",
     "react-fast-compare": "^3.2.0",
     "react-native": "0.69.7",
     "react-native-actions-sheet": "^0.8.10",
     "react-native-app-toolkit": "^1.1.0",
+    "react-native-awesome-slider": "^2.3.0",
     "react-native-blurhash": "^1.1.10",
     "react-native-bootsplash": "^4.3.3",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
     "react-native-code-push": "^7.0.5",
     "react-native-device-info": "^10.3.0",
@@ -104,6 +108,7 @@
     "react-native-override-color-scheme": "^1.0.3",
     "react-native-pager-view": "^6.0.0-rc.2",
     "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "^6.1.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
@@ -112,6 +117,7 @@
     "react-native-shake": "^5.1.1",
     "react-native-share": "^8.0.1",
     "react-native-svg": "^13.5.0",
+    "react-native-video": "^5.2.1",
     "react-native-zip-archive": "^6.0.9",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.11",
