--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^17",
     "@types/react-native": "0.67.8",
+    "@types/react-native-video": "^5.0.14",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
