--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "react-native-shake": "^5.1.1",
     "react-native-share": "^8.0.1",
     "react-native-svg": "^13.5.0",
-    "react-native-video": "^5.2.1",
+    "react-native-video": "^6.0.0-alpha.4",
     "react-native-zip-archive": "^6.0.9",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.11",
