--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-live-text-image-view": "^0.4.0",
     "react-native-localize": "^2.2.4",
     "react-native-mmkv": "^2.5.1",
     "react-native-orientation-locker": "^1.5.0",
