--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "start:cache": "react-native start --reset-cache",
     "ios": "react-native run-ios --simulator 'iPhone 12 (16.0)'",
     "test:detox": "detox test -c ios.sim.debug",
     "build:detox": "detox build -c ios.sim.debug",
@@ -29,10 +30,11 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/hooks": "^2.8.1",
-    "@react-native-community/netinfo": "^9.3.6",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-native-firebase/analytics": "16.4.3",
     "@react-native-firebase/app": "16.4.3",
     "@react-native-firebase/perf": "16.4.3",
@@ -40,16 +42,16 @@
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "~6.0.1",
-    "@react-navigation/native-stack": "^6.0.2",
-    "@react-navigation/stack": "~6.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/stack": "^6.3.11",
     "@rn-kit/sqlite": "^6.0.3",
-    "@sentry/react-native": "^4.8.0",
+    "@sentry/react-native": "^4.13.0",
     "@shopify/flash-list": "^1.4.0",
     "@tanstack/react-query": "^4.19.1",
     "axios": "^1.2.1",
-    "burnt": "^0.7.0",
+    "burnt": "^0.8.1",
     "colord": "^2.9.3",
     "dayjs": "^1.11.7",
     "expo": "~46.0.3",
@@ -83,7 +85,7 @@
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.3.0",
     "react-native-blurhash": "^1.1.10",
-    "react-native-bootsplash": "^4.3.3",
+    "react-native-bootsplash": "^4.4.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
@@ -94,15 +96,13 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "2.20.0",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-hold-menu": "^0.1.5",
-    "react-native-iap": "^12.4.9",
+    "react-native-iap": "^12.4.12",
     "react-native-image-picker": "^4.10.3",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-live-text-image-view": "^0.4.0",
     "react-native-localize": "^2.2.4",
     "react-native-mmkv": "^2.5.1",
     "react-native-orientation-locker": "^1.5.0",
@@ -111,12 +111,12 @@
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "^6.1.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.4",
-    "react-native-screens": "3.15.0",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
-    "react-native-share": "^8.0.1",
+    "react-native-share": "^8.1.0",
     "react-native-svg": "^13.5.0",
     "react-native-video": "^6.0.0-alpha.4",
     "react-native-zip-archive": "^6.0.9",
