--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "react-native-fs": "2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-iap": "^12.4.12",
+    "react-native-iap": "12.4.9",
     "react-native-image-picker": "^4.10.3",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
