--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@react-native-firebase/app": "16.4.3",
     "@react-native-firebase/perf": "16.4.3",
     "@react-native-firebase/remote-config": "16.4.3",
+    "@react-native-library/photos-picker": "^1.0.1",
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
@@ -67,6 +68,7 @@
     "expo-modules-core": "~0.11.3",
     "expo-sensors": "^12.0.1",
     "expo-status-bar": "~1.4.0",
+    "expo-store-review": "^6.0.0",
     "ffmpeg-kit-react-native": "^5.1.0",
     "i18next": "^22.0.4",
     "iconoir-react-native": "^5.4.0",
@@ -99,7 +101,6 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-iap": "12.4.9",
-    "react-native-image-picker": "^4.10.3",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
