feat: 添加购买成功事件

--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "@react-navigation/stack": "^6.3.11",
     "@rn-kit/sqlite": "^6.0.3",
     "@sentry/react-native": "^4.13.0",
-    "@shopify/flash-list": "^1.4.0",
+    "@shopify/flash-list": "1.4.0",
     "@tanstack/react-query": "^4.19.1",
     "axios": "^1.2.1",
-    "burnt": "^0.8.1",
+    "burnt": "0.9.0",
     "colord": "^2.9.3",
     "dayjs": "^1.11.7",
     "expo": "~46.0.3",
