--- a/ios/PrivacyBox/Info.plist
+++ b/ios/PrivacyBox/Info.plist
@@ -16,6 +16,32 @@
 	<dict>
 		<key>CFBundleAlternateIcons</key>
 		<dict>
+            <key>news</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>news120x120</string>
+                    <string>news167x167</string>
+                    <string>news128x128</string>
+                    <string>news152x152</string>
+                    <string>news180x180</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>weather</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>weather120x120</string>
+                    <string>weather167x167</string>
+                    <string>weather128x128</string>
+                    <string>weather152x152</string>
+                    <string>weather180x180</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
 			<key>calculator</key>
 			<dict>
 				<key>CFBundleIconFiles</key>
