--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
-    "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/native": "^6.1.2",
-    "@react-navigation/native-stack": "^6.9.8",
-    "@react-navigation/stack": "^6.3.11",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "@react-navigation/stack": "^6.3.12",
     "@rn-kit/sqlite": "^6.0.3",
     "@sentry/react-native": "^4.13.0",
-    "@shopify/flash-list": "1.4.0",
+    "@shopify/flash-list": "^1.4.1",
     "@tanstack/react-query": "^4.19.1",
     "axios": "^1.2.1",
     "burnt": "0.9.0",
@@ -61,6 +61,7 @@
     "expo-image-manipulator": "^11.0.0",
     "expo-linear-gradient": "~11.4.0",
     "expo-local-authentication": "^13.0.2",
+    "expo-mail-composer": "^12.0.0",
     "expo-media-library": "^15.0.0",
     "expo-modules-core": "~0.11.3",
     "expo-sensors": "^12.0.1",
@@ -84,7 +85,7 @@
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.3.0",
     "react-native-blurhash": "^1.1.10",
-    "react-native-bootsplash": "^4.4.0",
+    "react-native-bootsplash": "^4.4.2",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
@@ -95,7 +96,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "2.20.0",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-iap": "12.4.9",
     "react-native-inappbrowser-reborn": "^3.7.0",
@@ -109,9 +110,9 @@
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "^6.1.0",
-    "react-native-reanimated": "^2.13.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
     "react-native-share": "^8.1.0",
