--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,14 +6,18 @@ require File.join(File.dirname(`cd #{pod_folder} && node --print "require.resolv
 
 platform :ios, '14.0'
 install! 'cocoapods', :deterministic_uuids => false
+use_frameworks! :linkage => :static
 
 # 避免使用 IDFA
 $RNFirebaseAnalyticsWithoutAdIdSupport = true
+# Use Static Frameworks
+$RNFirebaseAsStaticFramework = true
 # 使用嵌入式 SQLite
 $QUICK_SQLITE_USE_PHONE_VERSION = 1
 
 target 'PrivacyBox' do
   use_expo_modules!
+
   post_integrate do |installer|
     begin
       expo_patch_react_imports!(installer)
@@ -31,7 +35,7 @@ target 'PrivacyBox' do
     # to disable hermes on iOS, change `true` to `flags[:hermes_enabled]` and then install pods
     :hermes_enabled => true,
     :fabric_enabled => false,
-    :flipper_configuration => FlipperConfiguration.enabled(["Debug"], { 'Flipper' => '0.157.0' }),
+    # :flipper_configuration => FlipperConfiguration.enabled(["Debug"], { 'Flipper' => '0.157.0' }),
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -46,13 +50,22 @@ target 'PrivacyBox' do
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
   pod 'Permission-MediaLibrary', :path => "#{permissions_path}/MediaLibrary"
   pod 'Permission-Motion', :path => "#{permissions_path}/Motion"
-
-  # Firebase
-  pod 'Firebase', :modular_headers => true
-  pod 'FirebaseCore', :modular_headers => true
-  pod 'GoogleUtilities', :modular_headers => true
   
   pod 'SPConfetti'
+
+  pre_install do |installer|
+    Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
+     
+    installer.pod_targets.each do |pod|
+       if pod.name.start_with?('RNFB') || 
+          pod.name.start_with?('Permission-') ||
+          pod.name.eql?('RNPermissions')
+         def pod.build_type;
+           Pod::BuildType.static_library
+         end
+       end
+     end
+   end
 
   target 'PrivacyBoxTests' do
     inherit! :complete
