--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
-    "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/native": "^6.1.3",
-    "@react-navigation/native-stack": "^6.9.9",
-    "@react-navigation/stack": "^6.3.12",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.14",
     "@rn-kit/sqlite": "^6.0.3",
-    "@sentry/react-native": "^4.13.0",
+    "@sentry/react-native": "^4.15.0",
     "@shopify/flash-list": "^1.4.1",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.1",
@@ -81,14 +81,14 @@
     "react-airplay": "^1.2.0",
     "react-fast-compare": "^3.2.0",
     "react-native": "0.69.7",
-    "react-native-actions-sheet": "^0.8.10",
+    "react-native-actions-sheet": "^0.8.21",
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.3.0",
     "react-native-bootsplash": "^4.4.2",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
-    "react-native-code-push": "^7.0.5",
+    "react-native-code-push": "^7.1.0",
     "react-native-device-info": "^10.3.0",
     "react-native-document-picker": "^8.1.3",
     "react-native-dynamic-app-icon": "^1.1.0",
@@ -111,12 +111,13 @@
     "react-native-quick-sqlite": "^6.1.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
+    "react-native-screens": "^3.20.0",
     "react-native-sfsymbols": "^1.2.1",
     "react-native-shake": "^5.1.1",
-    "react-native-share": "^8.1.0",
-    "react-native-svg": "^13.5.0",
-    "react-native-video": "^6.0.0-alpha.4",
+    "react-native-share": "^8.2.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-version-check": "^3.4.7",
+    "react-native-video": "6.0.0-alpha.5",
     "react-native-zip-archive": "^6.0.9",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.11",
@@ -140,6 +141,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^17",
     "@types/react-native": "0.67.8",
+    "@types/react-native-version-check": "^3.4.5",
     "@types/react-native-video": "^5.0.14",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "5.28.0",
