--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^9.3.7",
-    "@react-native-firebase/analytics": "17.1.0",
-    "@react-native-firebase/app": "17.1.0",
-    "@react-native-firebase/remote-config": "17.1.0",
+    "@react-native-firebase/analytics": "16.4.3",
+    "@react-native-firebase/app": "16.4.3",
+    "@react-native-firebase/remote-config": "16.4.3",
     "@react-native-library/photos-picker": "^1.0.7",
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
@@ -52,18 +52,18 @@
     "burnt": "0.9.0",
     "colord": "^2.9.3",
     "dayjs": "^1.11.7",
-    "expo": "~46.0.3",
-    "expo-application": "~4.2.2",
-    "expo-constants": "~13.2.3",
-    "expo-device": "~4.3.0",
+    "expo": "^47.0.13",
+    "expo-application": "^5.0.1",
+    "expo-constants": "^14.0.2",
+    "expo-device": "^5.0.0",
     "expo-file-system": "~14.1.0",
     "expo-haptics": "^12.0.1",
     "expo-image-manipulator": "^11.0.0",
-    "expo-linear-gradient": "~11.4.0",
+    "expo-linear-gradient": "^12.0.1",
     "expo-local-authentication": "^13.0.2",
     "expo-mail-composer": "^12.0.0",
     "expo-media-library": "^15.0.0",
-    "expo-modules-core": "~0.11.3",
+    "expo-modules-core": "^1.1.1",
     "expo-sensors": "^12.0.1",
     "expo-status-bar": "~1.4.0",
     "expo-store-review": "^6.0.0",
@@ -77,10 +77,10 @@
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
     "numeral": "^2.0.6",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-airplay": "^1.2.0",
     "react-fast-compare": "^3.2.0",
-    "react-native": "0.69.7",
+    "react-native": "0.71.3",
     "react-native-actions-sheet": "^0.8.21",
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.3.0",
@@ -101,14 +101,14 @@
     "react-native-ios-context-menu": "^1.15.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
-    "react-native-mmkv": "^2.5.1",
+    "react-native-mmkv": "2.5.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-override-color-scheme": "^1.0.3",
-    "react-native-pager-view": "^6.0.0-rc.2",
+    "react-native-pager-view": "6.0.0-rc.2",
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-quick-sqlite": "^6.1.0",
-    "react-native-reanimated": "^2.14.4",
+    "react-native-reanimated": "^3.0.0-rc.10",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-sfsymbols": "^1.2.1",
@@ -119,7 +119,7 @@
     "react-native-video": "6.0.0-alpha.4",
     "react-native-zip-archive": "^6.0.9",
     "rxjs": "^7.6.0",
-    "typeorm": "^0.3.11",
+    "typeorm": "^0.3.12",
     "use-deep-compare-effect": "^1.8.1",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
@@ -130,9 +130,10 @@
     "@babel/plugin-proposal-optional-catch-binding": "7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/runtime": "^7.18.3",
-    "@react-native-community/cli-platform-ios": "^8.0.2",
+    "@react-native-community/cli-platform-ios": "^10.1.1",
     "@rnx-kit/metro-config": "^1.2.32",
     "@rnx-kit/metro-resolver-symlinks": "0.1.21",
+    "@tsconfig/react-native": "^2.0.3",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.19",
     "@types/lodash": "^4.14.191",
@@ -167,8 +168,8 @@
     "jest-circus": "26",
     "jest-environment-node": "26",
     "jest-expo": "^46.0.1",
-    "metro-config": "0.71.1",
-    "metro-react-native-babel-preset": "0.70.3",
+    "metro-config": "^0.75.0",
+    "metro-react-native-babel-preset": "^0.75.0",
     "metro-source-map": "0.71.1",
     "mocha": "6",
     "patch-package": "6.4.7",
