feat: 新增导入模式选项

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@react-native-firebase/analytics": "16.4.3",
     "@react-native-firebase/app": "16.4.3",
     "@react-native-firebase/remote-config": "16.4.3",
-    "@react-native-library/photos-picker": "^1.0.7",
+    "@react-native-library/photos-picker": "1.1.0",
     "@react-native-library/webserver": "^1.0.3",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-segmented-control/segmented-control": "^2.4.0",
