--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "react-native-classify-image": "^1.2.0",
     "react-native-cloud-store": "^0.9.1",
     "react-native-device-info": "^10.3.0",
-    "react-native-document-picker": "^8.1.3",
+    "react-native-document-picker": "^8.2.0",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-file-viewer": "^2.1.5",
@@ -224,5 +224,6 @@
         "name": "iPhone 14"
       }
     }
-  }
+  },
+  "packageManager": "yarn@1.22.1"
 }
