fix: 修复无法检测生物识别权限

--- a/package.json
+++ b/package.json
@@ -225,5 +225,14 @@
       }
     }
   },
-  "packageManager": "yarn@1.22.1"
+  "reactNativePermissionsIOS": [
+    "Camera",
+    "LocationWhenInUse",
+    "FaceID",
+    "PhotoLibrary",
+    "PhotoLibraryAddOnly",
+    "Microphone",
+    "MediaLibrary",
+    "Motion"
+  ]
 }
