--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@rn-kit/sqlite": "^6.0.3",
-    "@sentry/react-native": "^5.3.0",
-    "@shopify/flash-list": "^1.4.1",
+    "@sentry/react-native": "5.3.0",
+    "@shopify/flash-list": "^1.4.3",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.2.1",
     "burnt": "0.9.0",
@@ -62,10 +62,10 @@
     "expo-linear-gradient": "^12.0.1",
     "expo-local-authentication": "^13.0.2",
     "expo-mail-composer": "^12.0.0",
-    "expo-media-library": "^15.0.0",
+    "expo-media-library": "^15.2.3",
     "expo-modules-core": "^1.1.1",
     "expo-sensors": "^12.0.1",
-    "expo-status-bar": "~1.4.0",
+    "expo-status-bar": "1.4.4",
     "expo-store-review": "^6.0.0",
     "ffmpeg-kit-react-native": "^5.1.0",
     "i18next": "^22.4.15",
@@ -80,7 +80,7 @@
     "react": "18.2.0",
     "react-airplay": "^1.2.0",
     "react-fast-compare": "^3.2.0",
-    "react-native": "^0.71.7",
+    "react-native": "0.71.7",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-app-toolkit": "^1.1.0",
     "react-native-awesome-slider": "^2.4.0",
